--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  db:
+  doc88:
     image: mysql
     restart: always
     environment:
@@ -12,6 +12,7 @@ services:
       - '3306:3306'
     volumes:
       - my-db:/var/lib/mysql
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
   web:
     image: urnau/app1-php:prod-nginx-php-fpm8.2.3
     container_name: web
